Improve game module api